# chat-langchain-lite

./: .env.example  .gitignore  .worktreeinclude  DEMO.md  DEMO_SCRIPT.md  Makefile  README.md  app.py  langgraph.json  lefthook.yml  pyproject.toml  requirements.txt
agent/: agent.py  remote.py  tools.py
context/: __init__.py
evals/: dataset.py  evaluators.py
frontend/: app.py
scripts/: build_monitoring.py  cleanup.py  eval_prompts.py  generate_traces.py  ls_admin.py  provision.py  push_prompts.py  resource_tags.py  run_evals.py  run_pairwise.py  setup.py
src/chat_langchain_lite/: __init__.py  agent.py  config.py  context.py  context_hub.py  prompts.py  tools.py
src/chat_langchain_lite/web/: app.py
utils/: context_hub.py  streaming.py
