[project]
name = "chat-lc-lite-agent"
version = "0.1.0"
description = "Chat LangChain Lite — a LangChain ecosystem chatbot with intentional bugs, built to demo LangSmith Engine"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.35.0",
    "markdown>=3.6",
    "deepagents>=0.6.3",
    "langchain>=1.3.1",
    "langgraph-sdk>=0.1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Explicit package list: this is a flat-layout repo with several top-level
# packages, so setuptools' auto-discovery refuses to build (it can't guess
# which dirs are the distribution). The LangSmith Cloud build does
# `uv pip install -e .`, which triggers that failure; listing packages makes
# the editable build deterministic.
[tool.setuptools]
packages = ["agent", "context", "evals", "scripts", "utils"]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
