[project]
name = "chat-lc-lite-agent"
version = "0.1.0"
description = "Chat LangChain Lite — a LangChain ecosystem chatbot with intentional bugs, built to demo LangSmith Engine"
requires-python = ">=3.11"
dependencies = [
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-sdk>=0.1.0",
    "langsmith>=0.1.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-fasthtml>=0.12.0",
    "deepagents>=0.6.3",
    "langchain>=1.3.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicit package list so the LangSmith Cloud / `langgraph build` Docker
# image (which runs `pip install .`) doesn't fail flat-layout auto-discovery
# on the multiple top-level directories.
packages = ["agent", "context", "evals", "frontend", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sane defaults: pyflakes (F), pycodestyle (E/W), import sorting (I),
# pyupgrade (UP), bugbear (B), comprehensions (C4), simplify (SIM).
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
# Line length is handled by `ruff format`; the remaining long lines are all data
# string literals (suggestion/prompt text, canned doc & dataset content, CDN URLs)
# that can't be split without hurting readability.
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.11"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.30",
    "ruff>=0.15.20",
    "ty>=0.0.54",
]
